--- a/frontend/home.html
+++ b/frontend/home.html
@@ -136,14 +136,14 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
+            <a href="home.html" class="nav-logo">
                 <div class="logo-icon">
                     <img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
                 </div>
                 <div class="logo-text">
                     <h1>Silver Spoon Society</h1>
                 </div>
-            </div>
+            </a>
             
             <div class="nav-links">
                 <a href="#welcome" class="nav-link">
