--- a/frontend/shopping-list.html
+++ b/frontend/shopping-list.html
@@ -15,7 +15,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
+            <a href="home.html" class="nav-logo">
                 <div class="logo-icon">
                     <!-- Logo image -->
                     <img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
@@ -23,7 +23,7 @@
                 <div class="logo-text">
                     <h1>Silver Spoon Society</h1>
                 </div>
-            </div>
+            </a>
             <div class="nav-links">
                 <a href="home.html" class="nav-link">
                     <i class="fas fa-home"></i>
