--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -68,6 +68,21 @@
         </div>
     </nav>
 
+    <!-- Nutrition Alert Banner -->
+    <div id="nutrition-alert-banner" class="nutrition-alert-banner" style="display: none;">
+        <div class="alert-content">
+            <div class="alert-icon">
+                <i class="fas fa-exclamation-triangle"></i>
+            </div>
+            <div class="alert-message">
+                <span id="alert-text"></span>
+            </div>
+            <button class="alert-close-btn" onclick="closeNutritionAlert()">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+    </div>
+
     <!-- Main Content Area -->
     <main class="main-content">
         <!-- Page Header -->
