Complete website design improvements; increase font sizes for better readability and remove print functionality

--- a/frontend/meal-planning.html
+++ b/frontend/meal-planning.html
@@ -161,10 +161,12 @@
                     <i class="fas fa-shopping-cart"></i>
                     <span>Generate Shopping List</span>
                 </button>
+                <!-- Temporarily commented out print functionality
                 <button class="btn btn-outline btn-large" onclick="printMealPlan()">
                     <i class="fas fa-print"></i>
                     <span>Print Plan</span>
                 </button>
+                -->
             </div>
         </div>
     </main>
