--- a/frontend/shopping-list.html
+++ b/frontend/shopping-list.html
@@ -95,9 +95,17 @@
                         <button id="clear-completed-btn" class="btn btn-secondary">
                             <i class="fas fa-broom"></i> Clear Completed
                         </button>
+                        <button id="clear-all-btn" class="btn btn-danger">
+                            <i class="fas fa-trash"></i> Clear All Items
+                        </button>
+                        <button id="select-all-btn" class="btn btn-outline">
+                            <i class="fas fa-check-square"></i> Select All
+                        </button>
+                        <!-- Temporarily commented out print functionality
                         <button id="print-list-btn" class="btn btn-outline">
                             <i class="fas fa-print"></i> Print List
                         </button>
+                        -->
                     </div>
                 </div>
             </div>
