Reduce target recipes and ingredient quotas for testing; add primary ingredient type detection and enhance shopping list generation with meal plan integration

--- a/frontend/shopping-list.html
+++ b/frontend/shopping-list.html
@@ -164,6 +164,11 @@
                     </div>
                 </div>
 
+                <!-- Star Rating Explanation -->
+                <div class="star-explanation">
+                    <p><i class="fas fa-info-circle"></i> <strong>⭐ Stars indicate usage frequency:</strong> More stars mean the ingredient is used in more recipes</p>
+                </div>
+
                 <!-- Shopping Categories -->
                 <div id="shopping-categories" class="shopping-categories">
                     <!-- Categories will be populated by JavaScript -->
