Enhance dietary options and meal planning features - Updated explore-recipes.html to replace dessert, soup, and salad options with brunch, side dish, starter, and main course. - Modified meal-planning.js to include new dietary options: keto, pescatarian, kosher, and raw food, while removing heart-healthy, diabetic-friendly, and soft food options. - Adjusted script.js to reflect the updated dietary tags in recipe habits, ensuring the new options are included in the filtering logic.

--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -100,11 +100,11 @@
                                 <option value="breakfast">Breakfast</option>
                                 <option value="lunch">Lunch</option>
                                 <option value="dinner">Dinner</option>
-                                <option value="dessert">Dessert</option>
-                                <option value="soup">Soup</option>
-                                <option value="salad">Salad</option>
+                                <option value="brunch">Brunch</option>
                                 <option value="snack">Snack</option>
-                                <option value="beverage">Beverage</option>
+                                <option value="side">Side Dish</option>
+                                <option value="starter">Starter</option>
+                                <option value="main">Main Course</option>
                             </select>
                         </div>
                         
@@ -114,11 +114,13 @@
                                 <option value="all">All</option>
                                 <option value="vegetarian">Vegetarian</option>
                                 <option value="vegan">Vegan</option>
+                                <option value="keto">Keto</option>
+                                <option value="pescatarian">Pescatarian</option>
+                                <option value="kosher">Kosher</option>
+                                <option value="raw">Raw Food</option>
                                 <option value="low_sugar">Low-Sugar</option>
                                 <option value="low_sodium">Low-Sodium</option>
-                                <option value="heart_healthy">Heart-Healthy</option>
-                                <option value="diabetic_friendly">Diabetic-Friendly</option>
-                                <option value="soft_food">Soft Food</option>
+                                <option value="healthyish">Healthy</option>
                             </select>
                         </div>
                         
