Refactor API configuration and improve nutrition calculation logic; unify API endpoints in config.js and enhance error handling across frontend components

--- a/frontend/meal-planning.html
+++ b/frontend/meal-planning.html
@@ -192,7 +192,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="config.js"></script>
     <script src="meal-planning.js"></script>
 </body>
 </html>
