--- a/frontend/shopping-list.html
+++ b/frontend/shopping-list.html
@@ -226,6 +226,7 @@
         </div>
     </footer>
 
+    <script src="config.js"></script>
     <script src="script.js"></script>
     <script src="shopping-list.js"></script>
 </body>
