Switch the logo to the new one

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -138,7 +138,7 @@
 		<div class="nav-container">
 			<a href="home.html" class="nav-logo">
 				<div class="logo-icon">
-					<img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
+					<img src="SliverSpoonSociety_Logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
 				</div>
 				<div class="logo-text">
 					<h1>Silver Spoon Society</h1>
