--- a/frontend/shopping-list.html
+++ b/frontend/shopping-list.html
@@ -18,7 +18,7 @@
             <a href="home.html" class="nav-logo">
                 <div class="logo-icon">
                     <!-- Logo image -->
-                    <img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
+                    <img src="SliverSpoonSociety_Logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
                 </div>
                 <div class="logo-text">
                     <h1>Silver Spoon Society</h1>
