--- a/netlify-deploy/meal-planning.html
+++ b/netlify-deploy/meal-planning.html
@@ -15,15 +15,15 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
+            <a href="home.html" class="nav-logo">
                 <div class="logo-icon">
                     <!-- Logo image -->
-                    <img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
+                    <img src="SliverSpoonSociety_Logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
                 </div>
                 <div class="logo-text">
                     <h1>Silver Spoon Society</h1>
                 </div>
-            </div>
+            </a>
             <div class="nav-links">
                 <a href="home.html" class="nav-link">
                     <i class="fas fa-home"></i>
@@ -31,23 +31,23 @@
                 </a>
                 <a href="explore-recipes.html" class="nav-link">
                     <i class="fas fa-search"></i>
-                    <span>Explore Recipes</span>
+                    <span>Recipes</span>
+                </a>
+                <a href="nutrition-dashboard.html" class="nav-link">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Dashboard</span>
                 </a>
                 <a href="daily-recommendations.html" class="nav-link">
                     <i class="fas fa-heart"></i>
-                    <span>Daily Recommendations</span>
+                    <span>Daily Tips</span>
                 </a>
                 <a href="meal-planning.html" class="nav-link active">
-                    <i class="fas fa-calendar"></i>
-                    <span>Meal Planning</span>
-                </a>
-                <a href="nutrition-dashboard.html" class="nav-link">
-                    <i class="fas fa-chart-bar"></i>
-                    <span>Nutrition Dashboard</span>
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>Planning</span>
                 </a>
                 <a href="shopping-list.html" class="nav-link">
                     <i class="fas fa-shopping-cart"></i>
-                    <span>Shopping List</span>
+                    <span>Shopping</span>
                 </a>
             </div>
             
@@ -68,12 +68,131 @@
         </div>
     </nav>
     <main class="main-content">
+        <!-- Page Header -->
         <section class="page-header">
-            <h1 class="page-title">Meal Planning</h1>
-            <p class="page-subtitle">There is nothing here for now.</p>
+            <div class="section-container">
+                <h1 class="page-title"><i class="fas fa-calendar-week"></i> Weekly Meal Plan</h1>
+                <p class="page-subtitle">Get personalized meal recommendations based on your preferences and dietary needs</p>
+            </div>
         </section>
+
+        <!-- Loading Spinner with Progress -->
+        <div id="loading-spinner" class="loading-spinner hidden">
+            <div class="spinner"></div>
+            <div class="loading-content">
+                <p id="loading-text">Creating your personalized weekly meal plan...</p>
+                <div class="progress-container">
+                    <div class="progress-bar">
+                        <div id="progress-fill" class="progress-fill"></div>
+                    </div>
+                    <div class="progress-details">
+                        <span id="progress-text">Preparing...</span>
+                        <span id="progress-percentage">0%</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- User Preferences Questionnaire -->
+        <div id="questionnaire-container" class="questionnaire-container">
+            <!-- Step Indicator -->
+            <div class="step-indicator">
+                <div class="step active" data-step="1">1</div>
+                <div class="step" data-step="2">2</div>
+                <div class="step" data-step="3">3</div>
+                <div class="step" data-step="4">4</div>
+            </div>
+
+            <!-- Questionnaire Content -->
+            <div id="questionnaire-content">
+                <!-- This will be populated by JavaScript -->
+            </div>
+
+            <!-- Button Group -->
+            <div class="button-group">
+                <button id="btn-back" class="btn btn-secondary" onclick="goToPreviousStep()" disabled>
+                    <i class="fas fa-arrow-left"></i> Back
+                </button>
+                <button id="btn-next" class="btn btn-primary" onclick="goToNextStep()">
+                    Next <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
+        </div>
+
+        <!-- Weekly Plan Display -->
+        <div id="weekly-plan-display" class="weekly-plan-display">
+            <!-- Plan Header -->
+            <div class="plan-header-modern">
+                <div class="plan-title-section">
+                    <h2><i class="fas fa-calendar-check"></i> Your Weekly Meal Plan</h2>
+                    <p class="plan-subtitle">Personalized nutrition for healthy aging</p>
+                </div>
+                <div class="plan-actions-header">
+                    <button class="btn-icon" onclick="regeneratePlan()" title="Generate New Plan">
+                        <i class="fas fa-refresh"></i>
+                    </button>
+                    <button class="btn-icon" onclick="updatePreferences()" title="Update Preferences">
+                        <i class="fas fa-cog"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Plan Info Bar -->
+            <div class="plan-info-bar">
+                <div class="info-item">
+                    <i class="fas fa-user-circle"></i>
+                    <span id="plan-user-info">Loading...</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span id="plan-date-range">This Week</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Allergy Safe</span>
+                </div>
+            </div>
+
+            <!-- Weekly Meal Plan Days -->
+            <div id="weekly-days-container" class="weekly-days-container">
+                <!-- This will be populated by JavaScript -->
+            </div>
+
+            <!-- Weekly Summary -->
+            <div class="weekly-summary-section">
+                <h3><i class="fas fa-chart-bar"></i> Weekly Summary</h3>
+                <div id="weekly-summary" class="weekly-summary">
+                    <!-- This will be populated by JavaScript -->
+                </div>
+            </div>
+
+            <!-- Quick Actions -->
+            <div class="quick-actions">
+                <button class="btn btn-primary btn-large" onclick="generateShoppingList()">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span>Generate Shopping List</span>
+                </button>
+                <!-- Temporarily commented out print functionality
+                <button class="btn btn-outline btn-large" onclick="printMealPlan()">
+                    <i class="fas fa-print"></i>
+                    <span>Print Plan</span>
+                </button>
+                -->
+            </div>
+        </div>
     </main>
 
-    <script src="script.js"></script>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="section-container">
+            <div class="footer-content">
+                <p class="footer-text">Supporting healthy eating habits for a better life</p>
+                <p class="footer-copyright">© 2024 Silver Spoon Society. Designed for senior wellness.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="config.js"></script>
+    <script src="meal-planning.js"></script>
 </body>
 </html>
