--- a/netlify-deploy/nutrition-dashboard.html
+++ b/netlify-deploy/nutrition-dashboard.html
@@ -15,14 +15,14 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
+            <a href="home.html" class="nav-logo">
                 <div class="logo-icon">
-                    <img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
+                    <img src="SliverSpoonSociety_Logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
                 </div>
                 <div class="logo-text">
                     <h1>Silver Spoon Society</h1>
                 </div>
-            </div>
+            </a>
             
             <div class="nav-links">
                 <a href="home.html" class="nav-link">
@@ -31,23 +31,23 @@
                 </a>
                 <a href="explore-recipes.html" class="nav-link">
                     <i class="fas fa-search"></i>
-                    <span>Explore Recipes</span>
+                    <span>Recipes</span>
+                </a>
+                <a href="nutrition-dashboard.html" class="nav-link active">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Dashboard</span>
                 </a>
                 <a href="daily-recommendations.html" class="nav-link">
                     <i class="fas fa-heart"></i>
-                    <span>Daily Recommendations</span>
+                    <span>Daily Tips</span>
                 </a>
                 <a href="meal-planning.html" class="nav-link">
-                    <i class="fas fa-calendar"></i>
-                    <span>Meal Planning</span>
-                </a>
-                <a href="nutrition-dashboard.html" class="nav-link active">
-                    <i class="fas fa-chart-bar"></i>
-                    <span>Nutrition Dashboard</span>
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>Planning</span>
                 </a>
                 <a href="shopping-list.html" class="nav-link">
                     <i class="fas fa-shopping-cart"></i>
-                    <span>Shopping List</span>
+                    <span>Shopping</span>
                 </a>
             </div>
             
@@ -68,12 +68,27 @@
         </div>
     </nav>
 
+    <!-- Nutrition Alert Banner -->
+    <div id="nutrition-alert-banner" class="nutrition-alert-banner" style="display: none;">
+        <div class="alert-content">
+            <div class="alert-icon">
+                <i class="fas fa-exclamation-triangle"></i>
+            </div>
+            <div class="alert-message">
+                <span id="alert-text"></span>
+            </div>
+            <button class="alert-close-btn" onclick="closeNutritionAlert()">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+    </div>
+
     <!-- Main Content Area -->
     <main class="main-content">
         <!-- Page Header -->
         <section class="page-header">
             <div class="section-container">
-                <h1 class="page-title">Nutrition Dashboard</h1>
+                <h1 class="page-title"><i class="fas fa-chart-line"></i> Nutrition Dashboard</h1>
                 <p class="page-subtitle">Track your daily nutrition intake and monitor your health goals</p>
                 <p class="page-description">Track your daily nutrition goals at a glance</p>
             </div>
@@ -238,6 +253,9 @@
                             <div class="meals-added">
                                 <div class="meals-added-header">
                                     <i class="fas fa-calendar-check"></i> <strong>Today's Meals Added</strong>
+                                    <button id="clear-all-meals" class="clear-all-btn" title="Clear all meals" style="display:none;">
+                                        <i class="fas fa-trash"></i> Clear All
+                                    </button>
                                 </div>
                                 <ul class="meals-added-list" style="margin-top:12px;">
                                     <!-- JS rendered items -->
@@ -250,6 +268,17 @@
         </section>
     </main>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="section-container">
+            <div class="footer-content">
+                <p class="footer-text">Supporting healthy eating habits for a better life</p>
+                <p class="footer-copyright">© 2024 Silver Spoon Society. Designed for senior wellness.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
