Add seasonal produce page and navigation links across multiple files

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -170,6 +170,10 @@
                     <i class="fas fa-shopping-cart"></i>
                     <span>Shopping</span>
                 </a>
+                <a href="seasonal-produce.html" class="nav-link">
+                    <i class="fas fa-leaf"></i>
+                    <span>Seasonal</span>
+                </a>
             </div>
             
             <!--
