Fix welcome section background position for better alignment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
 		.welcome-section {
 			background-image: url('cta3.jpg');
 			background-size: cover;
-			background-position: center 40%;
+			background-position: center center;
 			min-height: 100vh;
 			display: flex;
 			align-items: center;
