Enhance nutrition tracking and conversion features
- Updated unit conversion table to include more ingredient-specific conversions for better accuracy in nutrition calculations.
- Implemented a smart conversion function to handle ingredient-specific units, improving the accuracy of nutrition data.
- Expanded the nutrition data model to include additional nutrients such as fiber, sugars, calcium, and vitamin D.
- Modified frontend components to display new nutrition metrics and updated sorting options to include calcium and vitamin D.
- Revised meal planning and dashboard scripts to accommodate new nutrient calculations and ensure consistent data handling.
- Updated UI elements in the nutrition dashboard to reflect changes in nutrient tracking and display.

--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -176,47 +176,47 @@
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fas fa-bread-slice"></i>
+                                <i class="fas fa-bone"></i>
                             </div>
                             <div class="card-title">
-                                <h3>Carbohydrates</h3>
+                                <h3>Calcium</h3>
                                 <span class="status-tag low">low</span>
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value" id="carbohydrates-current">0</span>
+                            <span class="current-value" id="calcium-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="carbohydrates-goal">130</span>
-                            <span class="unit">g</span>
+                            <span class="goal-value" id="calcium-goal">1200</span>
+                            <span class="unit">mg</span>
                         </div>
-                        <p class="card-description">Energy from carbs</p>
+                        <p class="card-description">Bone health & strength</p>
                         <div class="card-progress">
                             <div class="progress-bar">
-                                <div class="progress-fill" style="width: 27%"></div>
+                                <div class="progress-fill" style="width: 0%"></div>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fa-solid fa-flask"></i>
+                                <i class="fas fa-sun"></i>
                             </div>
                             <div class="card-title">
-                                <h3>Sodium</h3>
+                                <h3>Vitamin D</h3>
                                 <span class="status-tag low">low</span>
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value" id="sodium-current">0</span>
+                            <span class="current-value" id="vitamin_d-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="sodium-goal">2300</span>
-                            <span class="unit">mg</span>
+                            <span class="goal-value" id="vitamin_d-goal">600</span>
+                            <span class="unit">IU</span>
                         </div>
-                        <p class="card-description">Sodium (recipe-sourced)</p>
+                        <p class="card-description">Calcium absorption & bone health</p>
                         <div class="card-progress">
                             <div class="progress-bar">
-                                <div class="progress-fill" style="width: 25%"></div>
+                                <div class="progress-fill" style="width: 0%"></div>
                             </div>
                         </div>
                     </div>
