--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -150,10 +150,10 @@
                             <option value="calories-low">Calories (Low to High)</option>
                             <option value="protein-high">Protein (High to Low)</option>
                             <option value="protein-low">Protein (Low to High)</option>
-                            <option value="fat-high">Fat (High to Low)</option>
-                            <option value="fat-low">Fat (Low to High)</option>
-                            <option value="sodium-high">Sodium (High to Low)</option>
-                            <option value="sodium-low">Sodium (Low to High)</option>
+                            <option value="calcium-high">Calcium (High to Low)</option>
+                            <option value="calcium-low">Calcium (Low to High)</option>
+                            <option value="vitamin_d-high">Vitamin D (High to Low)</option>
+                            <option value="vitamin_d-low">Vitamin D (Low to High)</option>
                         </select>
                     </div>
                     
